# fin_model

./: .gitignore
generator_deleted/: distribution.rs  flow_specs.proto
gui/src/component/: mod.rs  multi_column_select.rs
model/: Cargo.toml  build.rs
notes/: musings.md  normal_entries.md  questions.md
notes/ai_dialogs/: pdf_bard.md
notes/multi_button/: button_view.md  multi_button.mov
protobuf/: account.proto  age_assumptions.proto  balance_sheet.proto  core.proto  core_enums.proto  distributions.proto  growth.proto  person.proto  retirement.proto  system_defaults.proto  worth.proto
rust/: Cargo.toml
rust/gui/: Cargo.toml
rust/gui/benches/: clamp_bench.rs  date_input_bench.rs
rust/gui/src/: app.rs  lib.rs  main.rs
rust/gui/src/component/: account_component.rs  accounts_grid.rs  age_assumptions_component.rs  app_component.rs  app_nav_bar.rs  app_side_bar.rs  balance_sheet_component.rs  bond_spec_component.rs  clamp_sm.rs  collapsible_component.rs  collection_grid_component.rs  component_display_component.rs  currency_select.rs  currency_value_input.rs  date_input.rs  dispose_test.rs  distribution_cdf_component.rs  distribution_pdf_component.rs  distribution_spec_component.rs  dossier_correlation_entry_component.rs  dossier_correlation_matrix_component.rs  dossier_holding_index_input.rs  dossier_item_index_component.rs  enum_select.rs  expandable_rate_component.rs  flow_spec_component.rs  growing_flow_spec_component.rs  growth_assumption_component.rs  historic_risk_return_component.rs  holding_component.rs  holdings_grid.rs  integer_input.rs  item_growth_component.rs  item_growth_select.rs  mod.rs  multi_column_select.rs  normal_loss_component.rs  normal_spec_component.rs  normal_spec_growth.rs  numeric_input.rs  (+13 more)
rust/gui/src/component/collection_grid_impls/: accounts_impl.rs  holdings_impl.rs  mod.rs  normal_spec_impl.rs  vector_impl.rs  worths_impl.rs
rust/gui/src/context/: app_context.rs  mod.rs
rust/gui/src/utils/: block_time.rs  constants.rs  distribution_cdf.rs  distribution_pdf.rs  element_sugar.rs  historic_risk_return.rs  html_tag.rs  integer_clamp.rs  leptos_helpers.rs  live_parsed_date.rs  log_dispose.rs  mod.rs  numeric_text.rs  plot_data.rs  scale_by.rs  updatable.rs  year_clamp.rs
rust/gui/src/utils/clamp/: clamp_ext.rs  clamp_one_pass.rs  clamp_parse_input.rs  clamp_sm.rs  mod.rs
rust/gui/src/utils/clamp_exp/: clamp.rs  clamp2.rs  clamp_sm.rs  mod.rs
rust/gui/style/: main.scss
rust/model/: Cargo.toml  build.rs
rust/model/benches/: clamp_bench.rs
rust/model/src/: account.rs  age_assumptions.rs  age_assumptions_display.rs  clamp.rs  clamp_ext.rs  clamp_sm.rs  core.rs  core_display.rs  core_enums.rs  flow_specs_display.rs  get_digit_power.rs  growth.rs  growth_display.rs  lib.rs  person.rs  person_display.rs  scale_by.rs
rust/plus_client/: .gitignore  Cargo.toml
rust/plus_client/benches/: clamp_bench.rs  date_input_bench.rs
rust/plus_client/src/: enums.rs  file_serve.rs  lib.rs  main.rs
rust/plus_client/src/component/: account_component.rs  accounts_grid.rs  age_assumptions_component.rs  app_center_component.rs  app_component.rs  app_nav_bar.rs  app_side_bar.rs  bond_spec_component.rs  collapsible_component.rs  collection_grid_component.rs  component_display_component.rs  currency_select.rs  currency_value_input.rs  date_input.rs  dispose_test.rs  distribution_cdf_component.rs  distribution_pdf_component.rs  distribution_policy_component.rs  distribution_spec_component.rs  dossier_component.rs  dossier_correlation_entry_component.rs  dossier_correlation_matrix_component.rs  dossier_holding_index_input.rs  dossier_item_index_component.rs  enum_select.rs  expandable_rate_component.rs  growth_assumption_component.rs  historic_risk_return_component.rs  holding_component.rs  holdings_grid.rs  integer_input.rs  item_growth_component.rs  item_growth_select.rs  log_component.rs  mod.rs  multi_column_select.rs  normal_loss_component.rs  normal_spec_component.rs  numeric_input.rs  ok_cancel_component.rs  (+10 more)
rust/plus_client/src/component/app/: app_center_component.rs  app_component.rs  app_nav_bar.rs  app_side_bar.rs  error_display_component.rs  mod.rs
rust/plus_client/src/component/core/: collapsible_component.rs  collection_grid_component.rs  core_component_display.rs  css_show.rs  currency_select.rs  date_input.rs  dispose_test.rs  distribution_cdf_component.rs  distribution_pdf_component.rs  enum_select.rs  histogram_component.rs  historic_risk_return_component.rs  integer_input.rs  mod.rs  multi_button_select.rs  (+15 more)
rust/plus_client/src/context/: app_context.rs
rust/plus_client/src/utils/: block_time.rs  constants.rs  distribution_cdf.rs  distribution_pdf.rs  element_sugar.rs  historic_risk_return.rs  integer_clamp.rs  leptos_helpers.rs  live_parsed_date.rs  log_dispose.rs  mod.rs  numeric_text.rs  parsed_num.rs  plot_data.rs  updatable.rs
rust/plus_client/style/: main.scss
rust/plus_lookup/: Cargo.toml
rust/plus_lookup/i18n/de-DE/: plus_lookup.ftl
rust/plus_lookup/i18n/en-US/: plus_lookup.ftl
rust/plus_lookup/i18n/fr-FR/: plus_lookup.ftl
rust/plus_lookup/src/: currency_exchange.rs  currency_value.rs  generated_system_lookup.rs  i18n.rs  i18n_component_display.rs  i18n_enum_display.rs  lib.rs  system_defaults.rs  system_lookup.rs
rust/plus_modeled/: Cargo.toml  build.rs  build.rs.ignore
rust/plus_modeled/src/: account.rs  account_display.rs  age_assumptions_display.rs  balance_sheet.rs  balance_sheet_display.rs  constants.rs  core.rs  core_display.rs  core_enums.rs  currency_impl.rs  distributions.rs  distributions_display.rs  flow_directions.rs  flow_specs.rs  lib.rs  person_display.rs  retirement.rs  retirement_display.rs  system_defaults.rs  system_defaults_display.rs  system_unicodes.rs  worth.rs  worth_display.rs
rust/plus_utils/: Cargo.toml
rust/plus_utils/src/: date_utils.rs  lib.rs  plus_constants.rs  scale_by.rs  system_unicodes.rs  text_utils.rs
rust/plus_utils/src/math/: incremental_pearson.rs  incremental_stats.rs  measured_stats.rs  mod.rs
rust/plus_utils/src/svg/: histogram.rs  mod.rs
(+35 files in other folders)
