[package]
edition = "2021"
name = "plus_modeled"
version = "0.0.1"
description = """TODO: Describe cargo project(plus_modeled)"""
license = "MIT"
keywords = []


[lib]
# α <lib>
# ω <lib>

[dependencies]
prost = "0.11"
serde = "^1.0.27"
serde_derive = "^1.0.27" 
# α <dependencies>
strum = "0.24"
strum_macros = "0.24"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"


# ω <dependencies>

[build-dependencies]
tonic-build = "0.8" 
# α <build-dependencies>
# ω <build-dependencies>

[features]
# α <features>
# ω <features>
# α <additional>

[dev-dependencies]
criterion = "0.4.0"

# ω <additional>