[package]
edition = "2021"
name = "plus_lookup"
version = "0.0.1"
description = """Layer sitting on top of `plus_modeled` to support `i18n` and various name lookups."""
license = "MIT"
keywords = []


[lib]
# α <lib>
# ω <lib>

[dependencies]
# α <dependencies>
plus_modeled = { path = "../plus_modeled" }
plus_utils = { path = "../plus_utils" }
once_cell = "1.18.0"
test-log = "0.2.11"
env_logger = "0.9.1"
fluent-templates = "0.8.0"
unic-langid = "0.9.1"

# ω <dependencies>

[build-dependencies]
# α <build-dependencies>
# ω <build-dependencies>

[features]
# α <features>
# ω <features>
# α <additional>
# ω <additional>