[package]
edition = "2021"
name = "plus_utils"
version = "0.0.1"
description = """TODO: Describe cargo project(plus_utils)"""
license = "MIT"
keywords = []


[lib]
# α <lib>
# ω <lib>

[dependencies]
# α <dependencies>
num="0.4.1"
num-format = "0.4.3"
test-log = "0.2.11"
env_logger = "0.9.1"
# ω <dependencies>

[build-dependencies]
# α <build-dependencies>
# ω <build-dependencies>

[features]
# α <features>
# ω <features>
# α <additional>
# ω <additional>