[package]
edition = "2021"
name = "plus_utils"
version = "0.0.1"
description = """General utility code that can be used on server and webassembly"""
license = "MIT"
keywords = []


[lib]
# α <lib>
# ω <lib>

[dependencies]
# α <dependencies>
chrono = "0.4"
lazy_static = "1.4.0"
num="0.4.1"
num-format = "0.4.3"
ndarray = "0.15.6"
regex = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-timing = "0.6.0"
test-log = "0.2.11"
env_logger = "0.9.1"
serde = "^1.0.27"
serde_derive = "^1.0.27"

# ω <dependencies>

[build-dependencies]
# α <build-dependencies>
# ω <build-dependencies>

[features]
# α <features>
# ω <features>
# α <additional>
# ω <additional>